# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@pigweed//pw_build:pigweed.bzl", "pw_linker_script")

package(default_visibility = ["//visibility:public"])

platform(
    name = "platform",
    constraint_values = [
        "//libraries/pw_board_led_stm32f429i_disc1:backend_constraint_value",
        "@freertos//:port_ARM_CM4F",
        "@freertos//:disable_task_statics",
        "@pigweed//pw_build/constraints/rtos:freertos",
        "@pigweed//pw_interrupt_cortex_m:backend",
        "@pigweed//targets/stm32f429i_disc1_stm32cube:freertos_config_cv",
        "@platforms//os:none",

        # For toolchain selection.
        "@platforms//cpu:armv7e-m",
        "@pw_toolchain//constraints/arm_mcpu:cortex-m4",
    ],
)

pw_linker_script(
    name = "linker_script",
    defines = [
        "PW_BOOT_FLASH_BEGIN=0x08000200",
        "PW_BOOT_FLASH_SIZE=2048K",
        "PW_BOOT_HEAP_SIZE=7K",
        "PW_BOOT_MIN_STACK_SIZE=1K",
        "PW_BOOT_RAM_BEGIN=0x20000000",
        "PW_BOOT_RAM_SIZE=192K",
        "PW_BOOT_VECTOR_TABLE_BEGIN=0x08000000",
        "PW_BOOT_VECTOR_TABLE_SIZE=512",
    ],
    linker_script = "@pigweed//pw_boot_cortex_m:basic_cortex_m.ld",
)

cc_library(
    name = "extra_platform_libs",
    deps = [
        ":linker_script",
        "@pigweed//pw_tokenizer:linker_script",
        "@pigweed//pw_toolchain/arm_gcc:arm_none_eabi_gcc_support",
        "@pigweed//targets/stm32f429i_disc1_stm32cube:pre_init",
    ],
    alwayslink = 1,
)
